# artificial-intelligence-in-finance

./: .gitignore  pyproject.toml
notebook/: 01_hello_tensorflow.ipynb  02_simple_linear_regression_tf.ipynb  03-ols-regression.ipynb
