[project]
name = "artificial-intelligence-in-finance"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
